--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flashcard</title>
+</head>
+<body>
+    <main>
+        
+    </main>
+    <footer>
+        <p>Site desenvolvido pelo Alura -sen fins lucrativos</p>
+    </footer>
+</body>
+</html>
